--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "scripts": {
         "test": "echo hello!"
     },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jeffy-g/remove-cstyle-comments.git"
+    },
     "keywords": [
         "remove",
         "delete",
