--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,10 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}\\test.js",
+            "program": "${workspaceRoot}/test/tdev.js",
+            "args": [
+                
+            ],
             "outFiles": [
                 "${workspaceRoot}/*.js"
             ]
