--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "node": ">=4.8.4"
     },
     "author": "jeffy-g",
-    "license": "Apache-2.0"
+    "license": "Apache-2.0",
+    "devDependencies": {
+        "@types/node": "^8.0.26"
+    }
 }
