--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 // see: http://json.schemastore.org/tsconfig
 {
     "compilerOptions": {
-        "sourceMap": true,
+        "sourceMap": false,
         // 2017/6/1 22:18:29
         "removeComments": true,
         "declaration": false,
@@ -19,7 +19,7 @@
         "listFiles": false,
         "newLine": "LF",
 
-        "target": "es6",
+        "target": "es5",
         "module": "commonjs",
 
         "noEmitHelpers": false,
