--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "rm-cstyle-cmts",
     "version": "1.3.0",
     "description": "remove c style comments from text file(javascript source, json file etc...",
-    "main": "index.js",
+    "main": "./bin/index.js",
     "scripts": {
-        "test": "node test/tdev -r -f sample-cfg.json | node test/tdev -p"
+        "test": "node ./bin/test/ -r -f sample-cfg.json -l 1500 | node ./bin/test/ -p"
     },
     "repository": {
         "type": "git",
