--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "scripts": {
-        "test": "node ./bin/test/ -r -f sample-cfg.json -l 1500 | node ./bin/test/ -p"
+        "test": "node ./bin/bench/ -r -f sample-cfg.json -l 1500 | node ./bin/bench/ -p"
     },
     "repository": {
         "type": "git",
