--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,6 @@
     },
     "files": [
         "./src/ts/index.ts",
-        "./src/ts/test/index.ts"
+        "./src/ts/bench/index.ts"
     ]
 }
