--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.3.5",
+    "version": "1.3.6",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "scripts": {
-        "test": "node ./bin/bench/ -r -f sample-cfg.json -l 1500 | node ./bin/bench/ -p"
+        "test": "node ./bin/bench/ -r -f sample-cfg.json -l 1500 | node ./bin/bench/ -p",
+        "build": "tsc",
+        "dist": "gulp clean && tsc && gulp dist"
     },
     "repository": {
         "type": "git",
