--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.4.4",
+    "version": "1.4.5",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
+    "types": "./bin/index.d.ts",
     "scripts": {
         "test": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 | node ./bin/bench/ -p",
         "build": "tsc",
