--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "sourceMap": false,
         "removeComments": true,
 
-        // "declaration": true,
+        "declaration": true,
         // "declarationDir": ".d-ts/",
 
         // statistics
