--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "./bin/index.js",
     "types": "./bin/index.d.ts",
     "scripts": {
+        "lint": "tslint src/**/*.ts -p tsconfig.json --type-check",
         "test": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 | node ./bin/bench/ -p",
         "build": "tsc",
         "dist": "gulp dist && npm publish ./dist"
