--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "through2": "*",
         "gulp-util": "*",
-        "gulp-rm-cmts": "*"
+        "rm-cstyle-cmts": "*"
     },
     "devDependencies": {},
     "scripts": {
