fix: When a newline character is CRLF, regexp instance specifying multi-line flag can not correctly supplement CRLF with ^ and $
[If the character Input[e–1] is one of LineTerminator, return true.](http://www.ecma-international.org/ecma-262/6.0/#sec-assertion)

[ECMAScript® 2018 Language Specification 21.2.2.6Assertion](https://tc39.github.io/ecma262/#sec-assertion)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 // see: http://json.schemastore.org/tsconfig
 {
     "compilerOptions": {
-        "sourceMap": false,
+        "sourceMap": true,
         "removeComments": true,
 
         "declaration": true,
