test.js: convert to ts move sample file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "./bin/index.d.ts",
     "scripts": {
         "lint": "tslint src/**/*.ts -p tsconfig.json --type-check",
-        "test": "node test.js",
+        "test": "node ./test/test.js",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "build": "gulp rm:nullfile",
         "dist": "gulp dist && npm publish ./dist"
