update test code and codecov

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
             "type": "node",
             "request": "launch",
             "name": "simple test",
-            "program": "${workspaceRoot}/test.js",
+            "program": "${workspaceRoot}/test/test.js",
             "args": [
             ],
             "outFiles": [
