--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ cache:
 
 before_install:
   # - openssl aes-256-cbc -K $encrypted_3058eddffb79_key -iv $encrypted_3058eddffb79_iv -in travis.ppk.enc -out travis.ppk -d
+  - npm install -g codecov
 
 install:
   - npm install
@@ -28,7 +29,7 @@ script:
   - npm run bench
 
 after_success:
-  - 
+  - codecov
 
 before_deploy:
     - cd ./dist
