--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "./bin/index.d.ts",
     "scripts": {
         "lint": "tslint src/**/*.ts -p tsconfig.json --type-check",
-        "test": "node ./test/test.js",
+        "test": "istanbul cover test/test.js",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "build": "gulp rm:nullfile",
         "dist": "gulp dist && npm publish ./dist"
@@ -32,11 +32,14 @@
     "license": "Apache-2.0",
     "devDependencies": {
         "@types/node": "^8.0.26",
+        "codecov": "^2.3.0",
         "del": "^3.0.0",
         "gulp": "^3.9.1",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
         "gulp-typescript": "^3.2.2",
+        "istanbul": "^0.4.5",
+        "nyc": "^11.2.1",
         "typescript": "^2.5.2"
     }
 }
