--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "./bin/index.d.ts",
     "scripts": {
         "lint": "tslint src/**/*.ts -p tsconfig.json --type-check",
-        "test": "istanbul cover test/test.js",
+        "test": "istanbul cover test/test.js && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "build": "gulp rm:nullfile",
         "dist": "gulp dist && npm publish ./dist"
@@ -37,9 +37,10 @@
         "gulp": "^3.9.1",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
+        "gulp-sourcemaps": "^2.6.1",
         "gulp-typescript": "^3.2.2",
         "istanbul": "^0.4.5",
-        "nyc": "^11.2.1",
+        "remap-istanbul": "^0.9.5",
         "typescript": "^2.5.2"
     }
 }
