--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
   - npm test
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  # - codecov
+  # - bash <(curl -s https://codecov.io/bash)
+  - codecov -f coverage/coverage-remap.json
 
 before_deploy:
     - cd ./dist
