--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,13 +18,17 @@ pipelines:
 
           - cd ./dist
           - SUFFIX=; [ "$BITBUCKET_TAG" != "" ] && SUFFIX="-$BITBUCKET_TAG" || echo "BITBUCKET_TAG not setted..."; [ "$BITBUCKET_BRANCH" != "" ] && SUFFIX="$SUFFIX-$BITBUCKET_BRANCH" || echo "BITBUCKET_BRANCH not setted...";
-          - export ARCHIVE_NAME=${BITBUCKET_REPO_SLUG}${SUFFIX}-$BITBUCKET_BUILD_NUMBER.tar.gz
+          - export ARCHIVE_NAME=${BITBUCKET_REPO_SLUG}${SUFFIX}-$BITBUCKET_BUILD_NUMBER
           #- zip -r ../rm-cstyle-cmts-release.zip *
-          - tar czf ../${ARCHIVE_NAME} *
+          - tar czf ../${ARCHIVE_NAME}.tar.gz *
           - cd ..
 
+          - gulp dist:pack
+          - cd ./dist-pack
+          - tar czf ../${ARCHIVE_NAME}-webpack.tar.gz *
+          - cd ..
           # $BB_REST_API_DOWNLOADs: see Account level Environment variables
           # It can not be expanded if $BB_AUTH_STRING is included in the variable
           # ${BB_REST_API_DOWNLOADs} <- this also does not work...
           - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads"
-            --form files=@"${ARCHIVE_NAME}"
+            --form files=@"${ARCHIVE_NAME}*"
