refactoring ci relative

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,23 +16,4 @@ pipelines:
           - npm run bench
           - npm test
 
-          - cd ./dist
-          - SUFFIX=; [ "$BITBUCKET_TAG" != "" ] && SUFFIX="-$BITBUCKET_TAG" || echo "BITBUCKET_TAG not setted..."; [ "$BITBUCKET_BRANCH" != "" ] && SUFFIX="$SUFFIX-$BITBUCKET_BRANCH" || echo "BITBUCKET_BRANCH not setted...";
-          - export ARCHIVE_NAME=${BITBUCKET_REPO_SLUG}${SUFFIX}-$BITBUCKET_BUILD_NUMBER
-          #- zip -r ../rm-cstyle-cmts-release.zip *
-          - tar czf ../${ARCHIVE_NAME}.tar.gz *
-          - cd ..
-
-          - gulp dist:pack
-          - cd ./dist-pack
-          - tar czf ../${ARCHIVE_NAME}-webpack.tar.gz *
-          - cd ..
-          # $BB_REST_API_DOWNLOADs: see Account level Environment variables
-          # It can not be expanded if $BB_AUTH_STRING is included in the variable
-          # ${BB_REST_API_DOWNLOADs} <- this also does not work...
-          # NOTE: although it seems that only one can not be uploaded...
-          - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads"
-            --form files=@"${ARCHIVE_NAME}.tar.gz"
-          - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads"
-            --form files=@"${ARCHIVE_NAME}-webpack.tar.gz"
-
+          - bash ci-script.sh mk_n_upload_bitbucket
