--- a/.travis.yml
+++ b/.travis.yml
@@ -33,16 +33,7 @@ after_success:
   - codecov -f coverage/coverage-remap.json
 
 before_deploy:
-    - cd ./dist      # 
-    - zip -r ../rm-cstyle-cmts-$TRAVIS_TAG.zip *
-    - tar czf ../rm-cstyle-cmts-$TRAVIS_TAG.tar.gz *
-    - cd ..
-
-    - gulp dist:pack # use webpack + awesome-typescript-loader
-    - cd ./dist-pack
-    - zip -r ../rm-cstyle-cmts-$TRAVIS_TAG-webpack.zip *
-    - tar czf ../rm-cstyle-cmts-$TRAVIS_TAG-webpack.tar.gz *
-    - cd ..
+  - bash ci-script.sh mk_archive_on_travis
 
 deploy:
   provider: releases
