--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,6 +10,7 @@ pipelines:
     - step:
         caches:
           - node
+          - node_modules
         script: # Modify the commands below to build your repository.
           - npm install
           - gulp dist
