--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "./bin/index.d.ts",
     "typings": "./bin/index.d.ts",
     "scripts": {
-        "lint": "tslint src/**/*.ts -p tsconfig.json --type-check",
+        "lint": "tslint src/**/*.ts -p tsconfig.json --project",
         "test": "istanbul cover test/test.js && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
         "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 2000 -ol 10 && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
@@ -44,6 +44,7 @@
         "gulp-typescript": "^5.0.0-alpha.3",
         "istanbul": "^0.4.5",
         "remap-istanbul": "^0.11.1",
+        "tslint": "^5.11.0",
         "typescript": "^3.0.3",
         "uglifyjs-webpack-plugin": "^1.3.0",
         "webpack-stream": "^5.1.1"
