--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.4.24",
+    "version": "1.4.25",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "types": "./bin/index.d.ts",
@@ -38,15 +38,16 @@
         "codecov": "^3.1.0",
         "del": "^3.0.0",
         "gulp": "^4.0.0",
+        "gulp-cli": "^2.0.1",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-typescript": "^5.0.0-alpha.3",
         "istanbul": "^0.4.5",
-        "remap-istanbul": "^0.11.1",
+        "remap-istanbul": "^0.12.0",
         "tslint": "^5.11.0",
-        "typescript": "^3.0.3",
-        "uglifyjs-webpack-plugin": "^1.3.0",
+        "typescript": "^3.1.1",
+        "uglifyjs-webpack-plugin": "^2.0.1",
         "webpack-stream": "^5.1.1"
     }
 }
