--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "author": "jeffy-g",
     "license": "Apache-2.0",
     "devDependencies": {
-        "@types/node": "^10.9.4",
+        "@types/node": "^11.9.4",
         "awesome-typescript-loader": "^5.2.1",
         "codecov": "^3.1.0",
         "del": "^3.0.0",
@@ -44,9 +44,9 @@
         "gulp-sourcemaps": "^2.6.4",
         "gulp-typescript": "^5.0.0-alpha.3",
         "istanbul": "^0.4.5",
-        "remap-istanbul": "^0.12.0",
+        "remap-istanbul": "^0.13.0",
         "tslint": "^5.11.0",
-        "typescript": "^3.1.1",
+        "typescript": "*",
         "uglifyjs-webpack-plugin": "^2.0.1",
         "webpack-stream": "^5.1.1"
     }
