--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.4.25",
+    "version": "1.4.26",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "types": "./bin/index.d.ts",
@@ -33,21 +33,21 @@
     "author": "jeffy-g",
     "license": "Apache-2.0",
     "devDependencies": {
-        "@types/node": "^11.9.4",
+        "@types/node": "^11.11.3",
         "awesome-typescript-loader": "^5.2.1",
         "codecov": "^3.1.0",
-        "del": "^3.0.0",
+        "del": "^4.0.0",
         "gulp": "^4.0.0",
         "gulp-cli": "^2.0.1",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
-        "gulp-sourcemaps": "^2.6.4",
-        "gulp-typescript": "^5.0.0-alpha.3",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-typescript": "^5.0.1",
         "istanbul": "^0.4.5",
         "remap-istanbul": "^0.13.0",
-        "tslint": "^5.11.0",
-        "typescript": "*",
-        "uglifyjs-webpack-plugin": "^2.0.1",
+        "tslint": "^5.14.0",
+        "typescript": "3.3.3333",
+        "uglifyjs-webpack-plugin": "^2.1.2",
         "webpack-stream": "^5.1.1"
     }
 }
