♻️ src/ts/reutil.ts - refactor significantly
  + 📝 It seems to be able to demonstrate stable performance

  + others, refactoring and edit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,7 @@
             "type": "node",
             "request": "launch",
             "name": "simple test",
+            "runtimeExecutable": "F:/ext_prg/Nodist/bin/node.exe",
             "program": "${workspaceRoot}/test/test.js",
             "args": [
             ],
