--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.5.2",
+    "version": "1.5.3",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "types": "./bin/index.d.ts",
@@ -35,6 +35,7 @@
     "devDependencies": {
         "@types/node": "^11.13.8",
         "codecov": "^3.3.0",
+        "colors": "^1.3.3",
         "del": "^4.1.0",
         "gulp": "^4.0.1",
         "gulp-cli": "^2.2.0",
