__[v1.5.4]__ ♻️ refactoring for `jsx` and `tsx` detection
  + 📝 In this modification, use "RegExp Lookbehind Assertions" a little.
    If this feature is available, then jsx and tsx will also process smart.
    - ⚠️ To benefit from this feature, you need a node v8.10 or later.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,9 @@
             "args": [
                 "-f", "samples/rmc-impossible.tsx"
             ],
-            "outFiles": [
-                "${workspaceFolder}/bin/**/*.js"
-            ]
+            // "outFiles": [
+            //     "${workspaceFolder}/bin/**/*.js"
+            // ]
         }, {
             "type": "node",
             "request": "launch",
@@ -24,20 +24,20 @@
             "args": [
                 "-p", "plog"
             ],
-            "outFiles": [
-                "${workspaceRoot}/bin/**/*.js"
-            ]
+            // "outFiles": [
+            //     "${workspaceRoot}/bin/**/*.js"
+            // ]
         }, {
             "type": "node",
             "request": "launch",
-            "name": "simple test",
+            "name": "debug test code",
             "runtimeExecutable": "F:/ext_prg/Nodist/bin/node.exe",
             "program": "${workspaceRoot}/test/test.js",
-            "args": [
-            ],
-            "outFiles": [
-                "${workspaceRoot}/**/*.js"
-            ]
+            // "args": [
+            // ],
+            // "outFiles": [
+            //     "${workspaceRoot}/**/*.js"
+            // ]
         }
     ]
 }
