--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rm-cstyle-cmts",
-    "version": "1.5.4",
+    "version": "1.6.0",
     "description": "remove c style comments from text file(javascript source, json file etc...",
     "main": "./bin/index.js",
     "types": "./bin/index.d.ts",
@@ -9,6 +9,7 @@
         "lint": "tslint src/**/*.ts -p tsconfig.json --project",
         "test": "tsc ./test/test.ts --sourcemap true && istanbul cover test/test.js && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
         "bench": "node -v && node ./bin/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./bin/bench/ -p",
+        "bench2": "node -v && bash ./scripts/extra-bench.sh",
         "bench:cov": "istanbul cover ./bin/bench/ -- -f samples/es6.js -l 2000 -ol 10 && remap-istanbul -i coverage/coverage.json -o coverage/coverage-remap.json",
         "build": "gulp rm:nullfile",
         "dist": "gulp dist:pack"
@@ -33,7 +34,7 @@
     "author": "jeffy-g",
     "license": "Apache-2.0",
     "devDependencies": {
-        "@types/node": "^11.13.8",
+        "@types/node": "^12.0.0",
         "codecov": "^3.3.0",
         "colors": "^1.3.3",
         "del": "^4.1.0",
