--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "9"
+  - "12"
   # - "8"
   # - "7"
   # - "6"
@@ -20,7 +20,7 @@ before_install:
   # - npm install -g codecov
 
 install:
-  - npm install
+  - yarn install
 
 before_script:
   - gulp dist
@@ -34,7 +34,7 @@ after_success:
   - codecov -f coverage/coverage-remap.json
 
 before_deploy:
-  - bash ci-script.sh
+  - bash scripts/ci-script.sh
 
 deploy:
   provider: releases
